test-resources/resource-test/static/endpoints.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: endpoints
subsets:
  - addresses:
      - ip: 8.8.8.8
    ports:
      - port: 8888
