test-resources/resource-test/static/service-updated.yml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: service
      port: 8899
      protocol: TCP
      targetPort: 8899
  selector:
    name: service
