test-resources/resource-test/static/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: service
      port: 8888
      protocol: TCP
      targetPort: 8888
  selector:
    name: service
