test-resources/resource-test/static/ingress-updated.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: example
          servicePort: 8080
  - host: example.org
    http:
      paths:
      - path: /test
        backend:
          serviceName: example-org
          servicePort: 80
